--- a/css/signin.css
+++ b/css/signin.css
@@ -55,7 +55,7 @@ body{
     color: #ffff;
 }
 .input-box i{
-    position: absolute;
+    /* position: absolute; */
     right: 20px;
     top: 50%;
     transform: translateY(-50%);
