--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,6 @@
 
 }
 
-:root{
-    --body-color:url(../images/background.jpg);
-    --nav-color: url(../images/background.jpg);
-    --background-color:rgba(138, 64, 194, 0.853);
-}
 
 .white-theme{
     --body-color:url(../images/whitepic.jpg);
@@ -19,11 +14,10 @@
 
 }
 body{
-    background: var(--body-color);
+    background:url(../images/background.jpg);
 
-    backdrop-filter: blur(5px);
-    transition: background 0.3s;
-    
+    /* backdrop-filter: blur(5px);
+    transition: 0.3s; */
 }
 .wrapper{
     display: flex;
@@ -38,12 +32,21 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: var(--nav-color);
-    padding: 5px 5%;
+    background: url(../images/background.jpg);
+    padding: 1px 1%;
     position: sticky;
     top: 0;
     z-index: 100;
+    top: fixed;
  
+}
+.container-fluid{
+    display: flex;
+}
+.container-fluid a{
+    text-decoration: none;
+    color: white;
+    font-size: 32px;
 }
 .logo {
     width: 40px;
@@ -57,9 +60,11 @@ nav{
     list-style: none;
     display: inline-block;
 }
-.nav-left ul li img{
-    width: 28px;
-    margin: 0 15px;
+
+.nav-item img{
+    width: 32px;
+    height: 32px;
+    margin: 0 125px;
 }
 .nav-user-icon img{
     margin-left: 10px;
@@ -69,7 +74,7 @@ nav{
     cursor: pointer;
 
 }
-.search-box{
+.nav-right{
     background: #efefef;
     width: 350px;
     border-radius: 20px;
@@ -77,15 +82,20 @@ nav{
     align-items: center;
     padding: 0 15px;
 }
-.search-box img{
+.nav-right img{
     width: 25px;
 }
-.search-box input{
+.nav-right input{
     width: 100%;
     background: transparent;
     padding: 10px;
     outline: none;
     border: 0;
+}
+
+.nav-right button{
+    border: none;
+
 }
 .online{
     position: relative;
@@ -97,7 +107,7 @@ nav{
     border: 1px solid rgba(255, 255, 255, 0.725); 
     border-radius: 50px;
     background: #0fff03;
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     right: 0;
 }
@@ -198,7 +208,7 @@ nav{
 }
 
 .left-event span{
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     left: 0;
     width: 100%;
@@ -329,7 +339,7 @@ nav{
 }
 
 .settings-menu{
-    position: absolute;
+    /* position: absolute; */
     width: 80%;
     max-width:350px;
     height: 350px;
@@ -381,7 +391,7 @@ nav{
 }
 
 #white-btn{
-    position: absolute;
+    /* position: absolute; */
     top: 20px;
     right: 20px;
     background: #c060e5b6;
