--- a/css/main.css
+++ b/css/main.css
@@ -3,27 +3,17 @@
     padding: 0;
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
-
+    flex: top;
 }
 
-:root{
-    --body-color:url(../images/background.jpg);
-    --nav-color: url(../images/background.jpg);
-    --background-color:rgba(138, 64, 194, 0.853);
-}
 
-.white-theme{
-    --body-color:url(../images/whitepic.jpg);
-    --nav-color: url(../images/whitepic.jpg);
-    --background-color: url(../images/whitepic.jpg);
 
-}
 body{
-    background: var(--body-color);
+    background:url(../images/background.jpg);
+    padding-top: 50px;
 
-    backdrop-filter: blur(5px);
-    transition: background 0.3s;
-    
+    /* backdrop-filter: blur(5px);
+    transition: 0.3s; */
 }
 .wrapper{
     display: flex;
@@ -37,19 +27,30 @@ body{
 nav{
     display: flex;
     align-items: center;
+    height: 65px;
     justify-content: space-between;
-    background: var(--nav-color);
-    padding: 5px 5%;
+    background: url(../images/background.jpg);
+    padding: 1px 1%;
     position: sticky;
     top: 0;
     z-index: 100;
+    top: fixed;
  
 }
-.logo {
-    width: 40px;
-    margin-right: 45px;
+.container-fluid{
+    display: flex;
 }
-.nav-left, .nav-right{
+.container-fluid a{
+    text-decoration: none;
+    color: black;
+    font-size: 26px;
+}
+.nav-item  a{
+    color: #626262;
+    
+}
+
+.nav-left, .d-flex{
     display: flex; 
     align-items: center;
 }
@@ -57,10 +58,7 @@ nav{
     list-style: none;
     display: inline-block;
 }
-.nav-left ul li img{
-    width: 28px;
-    margin: 0 15px;
-}
+
 .nav-user-icon img{
     margin-left: 10px;
     width: 40px;
@@ -69,7 +67,7 @@ nav{
     cursor: pointer;
 
 }
-.search-box{
+.d-flex{
     background: #efefef;
     width: 350px;
     border-radius: 20px;
@@ -77,31 +75,21 @@ nav{
     align-items: center;
     padding: 0 15px;
 }
-.search-box img{
+.d-flex img{
     width: 25px;
 }
-.search-box input{
+.d-flex input{
     width: 100%;
     background: transparent;
     padding: 10px;
     outline: none;
     border: 0;
 }
-.online{
-    position: relative;
-}
-.online::after{
-    content: '';
-    width: 7px;
-    height: 7px;
-    border: 1px solid rgba(255, 255, 255, 0.725); 
-    border-radius: 50px;
-    background: #0fff03;
-    position: absolute;
-    top: 0;
-    right: 0;
-}
 
+.d-flex button{
+    border: none;
+
+}
 .container{
     display: flex;
     justify-content: space-between;
@@ -198,7 +186,7 @@ nav{
 }
 
 .left-event span{
-    position: absolute;
+    /* position: absolute; */
     bottom: 0;
     left: 0;
     width: 100%;
@@ -329,7 +317,7 @@ nav{
 }
 
 .settings-menu{
-    position: absolute;
+    /* position: absolute; */
     width: 80%;
     max-width:350px;
     height: 350px;
@@ -365,9 +353,9 @@ nav{
     align-items: center;
     margin: 15px 0;
 }
-.settings-links .settings-icons{
-    width: 38px;
-    height: 38px;
+.dropdown-item .settings-icons{
+    width: 20px;
+    height: 20px;
     margin-right: 10px;
     border-radius: 50%;
 }
@@ -381,7 +369,7 @@ nav{
 }
 
 #white-btn{
-    position: absolute;
+    /* position: absolute; */
     top: 20px;
     right: 20px;
     background: #c060e5b6;
