--- a/css/main.css
+++ b/css/main.css
@@ -3,24 +3,27 @@
     padding: 0;
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
-    flex: top;
 }
 
 
 
 body{
-    padding-top: 50px;
+    background: url(../images/background.jpg);
+    padding-top: 60px;
+    
+    
 
     /* backdrop-filter: blur(5px);
     transition: 0.3s; */
 }
 .wrapper{
+
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-color: antiquewhite;
-
+    
 }
 
 nav{
@@ -33,16 +36,21 @@ nav{
     position: sticky;
     top: 0;
     z-index: 100;
-    top: fixed;
  
 }
 .container-fluid{
     display: flex;
+
+    
+}
+.dropdown-menu{
+
+
 }
     
 #navbarCollapse a{
-    font-size: 26px;
-    color: #626262c4;
+    font-size: 20px;
+    color: #626262aa;
 }
 
 #navbarCollapse .dropdown-menu a{
@@ -91,10 +99,11 @@ nav{
 .container{
     display: flex;
     justify-content: space-between;
-    padding: 15px 5%;
+    padding: 10px 5%;
 }
 
 .left-sidebar{
+    padding-right: 0%;
     flex-basis: 25%;
     position: sticky;
     top: 70px;
@@ -108,7 +117,7 @@ nav{
     display: flex;
     align-items: center;
     margin-bottom: 30px;
-    color: rgb(0, 0, 0);
+    color: rgba(0, 0, 0, 0.828);
     width: fit-content;
 }
 
@@ -157,10 +166,13 @@ nav{
     color: #73247acc;
     font-size: 12px;
 }
-.event{
+.event {
     display: flex;
     font-size: 12px;
     margin-bottom: 20px;
+}
+.event h3{
+    font-size: 12px;
 }
 .left-event{
     border-radius: 10px;
@@ -184,13 +196,13 @@ nav{
 }
 
 .left-event span{
-    /* position: absolute; */
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    background: var(--background-color) ;
+    background:url(../images/background.jpg);
     font-size: 10px;
-    color: white;
+    color: rgb(12, 11, 11);
     padding: 2px 0;
 }
 .write-post-container{
