--- a/css/signin.css
+++ b/css/signin.css
@@ -11,16 +11,15 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: #ffe1a0;
 }
 
 .wrapper{
     width: 420px;
-    background:transparent ;
-    border: 2px solid rgba(255, 255, 255, .2);
+    background:white ;
+    border: 2px solid rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-
-    color: #ffff;
+    box-shadow: 0 0 10px rgba(177, 115, 0, 0.733);
     border-radius:10px ;
     padding: 30px 40px;
 }
@@ -39,13 +38,13 @@ body{
 .input-box input{
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: rgb(255, 255, 255);
     border: none;
     outline: none;
-    border: 2px solid rgba(255, 255, 255, 2);
-    border-radius: 40px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 10px;
     font-size: 16px;
-    color: #ffff;
+    color: #000000;
     padding: 20px 45px 20px 20px;
 
 }
@@ -97,7 +96,7 @@ body{
 }
 
 .register-link p a{
-    color: #ffff;
+    color: #facc6a;
     text-decoration: none;
     font-weight: 600;
 }
