--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 body{
     padding-top: 60px;
     background-size: cover;
-    background-color: #efefef;
+    background-color: #efefef
     
 }
 .wrapper{
@@ -34,10 +34,8 @@ nav{
 }
 .container-fluid{
     display: flex;
-    background-color: rgba(255, 255, 255, 0.728);
+    background-color: rgba(255, 255, 255, 0.855);
     margin-top: 0;
-    margin-bottom: 10px;
-
 }
 
 .container, .container-md, .container-sm {
@@ -60,6 +58,10 @@ nav{
 .nav-left ul li{
     list-style: none;
     display: inline-block;
+}
+span, .navbar-toggler-icon{
+    background-color: #9292925b;
+    border-radius: 10%;
 }
 
 .d-flex{
@@ -325,6 +327,9 @@ nav{
     background-image: url(../images/clickedfire.png);
     width: 17px;
     height: 17px;
+ }
+ .span, #likeCount{
+    background-color: transparent;
  }
  .not-liked{
     background-image: url(../images/fire.png);
