--- a/css/main.css
+++ b/css/main.css
@@ -119,9 +119,9 @@ span, .navbar-toggler-icon{
     margin-right: 15px;
 
 }
-.imp-links a:last-child{
+/* .imp-links a:last-child{
     color:#73247acc;
-}
+} */
 .imp-links{
     border-bottom: 1px solid #ccc;
 
