--- a/css/signin.css
+++ b/css/signin.css
@@ -104,7 +104,7 @@ body{
     text-decoration: underline;
 }
 .title-word h1{
-    color: #ffff;
+    color: #110606;
     font-size: 46px;
     text-align: center;
 }
