--- a/css/signin.css
+++ b/css/signin.css
@@ -12,6 +12,7 @@ body{
     align-items: center;
     min-height: 100vh;
     background-color: #ffe1a0;
+    background-image: url("./moon.png");
 }
 
 .wrapper{
