--- a/css/signin.css
+++ b/css/signin.css
@@ -11,15 +11,15 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #ffe1a0;
+    background-color: #ffffff;
 }
 
 .wrapper{
     width: 420px;
     background:white ;
-    border: 2px solid rgba(255, 255, 255, 0.2);
+    border: 2px solid rgb(0, 0, 0);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(177, 115, 0, 0.733);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.733);
     border-radius:10px ;
     padding: 30px 40px;
 }
@@ -38,7 +38,7 @@ body{
 .input-box input{
     width: 100%;
     height: 100%;
-    background: rgb(255, 58, 58);
+    background: rgb(255, 255, 255);
     border: none;
     outline: none;
     border: 2px solid rgb(0, 0, 0);
@@ -50,7 +50,7 @@ body{
 }
  
 .input-box input::placeholder{
-    color: #ffff;
+    color: #000000;
 }
 .input-box i{
     /* position: absolute; */
