--- a/css/signin.css
+++ b/css/signin.css
@@ -11,15 +11,15 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #ffffff;
+    background: url("../images/background.jpg");
 }
 
 .wrapper{
     width: 420px;
-    background:white ;
-    border: 2px solid rgb(0, 0, 0);
+    background:rgba(223, 219, 219, 0.15) ;
+    border: white 2px solid;
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.733);
+    box-shadow: 0 0 10px rgb(255, 255, 255);
     border-radius:10px ;
     padding: 30px 40px;
 }
@@ -38,10 +38,10 @@ body{
 .input-box input{
     width: 100%;
     height: 100%;
-    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0);
     border: none;
     outline: none;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid white;
     border-radius: 10px;
     font-size: 16px;
     color: #000000;
@@ -50,7 +50,7 @@ body{
 }
  
 .input-box input::placeholder{
-    color: #000000;
+    color: rgba(0, 0, 0, 0.648);
 }
 .input-box i{
     /* position: absolute; */
@@ -96,7 +96,7 @@ body{
 }
 
 .register-link p a{
-    color: #facc6a;
+    color: purple;
     text-decoration: none;
     font-weight: 600;
 }
