--- a/css/main.css
+++ b/css/main.css
@@ -512,8 +512,11 @@ span, .navbar-toggler-icon{
     text-decoration: none;
     margin-bottom: 10px;
     display: block;
+    text-align: center;
+    content: none;
   }
-  .setting-post-container img{
+  
+    .setting-post-container img{
     width: 180px;
     height: 180px;
     border: 2px solid #e1e1e1;
@@ -549,8 +552,6 @@ span, .navbar-toggler-icon{
   .btn_type01:hover {
     background-color: #851acd;
   }
-
-
 
 
 
