--- a/css/main.css
+++ b/css/main.css
@@ -105,8 +105,12 @@ span, .navbar-toggler-icon{
     align-self: flex-start;
 }
 
-.main-content{
-    flex-basis: 65%;
+.main-content {
+    flex-basis: 100%;
+    display: flex;
+    flex-wrap: wrap; /* 複数行になるように設定 */
+    gap: 20px; /* 要素間の余白を指定 */
+    justify-content: space-between; /* 要素を横方向に均等に配置 */
 }
 .imp-links a, .shortcut-links a{
     text-decoration:none ;
@@ -264,6 +268,7 @@ span, .navbar-toggler-icon{
     border-radius: 6px;
     padding: 20px;
     color: #626262;
+    box-sizing: border-box;
     margin: 20px 0;
 
 }
@@ -302,10 +307,11 @@ span, .navbar-toggler-icon{
     text-decoration: none;
 
 }
-.post-img{
-    width: 100%;
-    border-radius: 4px;
-    margin-bottom: 5px;
+.post-img {
+    object-fit: cover; /* 画像を均等に拡大または縮小して表示 */
+    object-position: center; /* 画像の表示位置を中央に設定 */
+    height: 200px; /* 画像の高さを調整（適切な高さに調整してください） */
+    width: 100%; /* 幅は親要素に合わせて100%に設定 */
 }
 .post-row{
     display: flex;
