--- a/css/main.css
+++ b/css/main.css
@@ -535,31 +535,31 @@ span, .navbar-toggler-icon{
     content: none;
   }
   
-    .setting-post-container img{
-    width: 180px;
-    height: 180px;
+.setting-post-container img{
+    width: 40vh;
+    height: 40vh;
     border: 2px solid #e1e1e1;
     border-radius: 180%;
-    margin: 5% 40% 5%;
+    justify-content: center;
+    align-items: center;
+    top: 50%;
+    left: 50%;
+}
 
-
-
-  }
-
-    .setting-post-container ul li a:hover {
+.setting-post-container ul li a:hover {
     text-decoration: none;
     color: #dc6666;
   }
   
-  .label {
+.label {
     margin-right: 10px;
   }
 
-  .submit {
+.submit {
     text-align: center;
   }
   
-  .btn_type01 {
+.btn_type01 {
     padding: 10px 20px;
     background-color: rgba(0, 0, 0, 0.253);
     color: #fff;
@@ -576,5 +576,10 @@ span, .navbar-toggler-icon{
 .notification-btn {
     font-size: 20px; 
 }
+
+
+  
+  
+  
 
 
