--- a/css/main.css
+++ b/css/main.css
@@ -488,7 +488,7 @@ span, .navbar-toggler-icon{
     background-image: linear-gradient(45deg, 
       #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,
       #bc1888 100%);
-    /* -webkit-background-clip: text; */
+    -webkit-background-clip: text; 
      -webkit-text-fill-color: transparent;
     border-bottom: 3px solid #dc2743;
 }
