--- a/css/signin.css
+++ b/css/signin.css
@@ -11,13 +11,15 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: rgb(255, 224, 85);
+    background-image: url(../images/backgroundpic.jpg);
+    /* background-size: cover;
+    background-repeat: repeat; */
 }
 
 .wrapper{
     width: 420px;
-    background:white ;
-    border: 2px solid rgb(0, 0, 0);
+    background:rgba(249, 249, 249, 0.507) ;
+    border: 2px solid #ffffff60;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.733);
     border-radius:10px ;
@@ -27,6 +29,7 @@ body{
 .wrapper h1{
     font-size: 36px;
     text-align: center;
+    color: white;
 }
 
 .wrapper .input-box{
@@ -38,19 +41,19 @@ body{
 .input-box input{
     width: 100%;
     height: 100%;
-    background: rgb(255, 255, 255);
+    background: rgba(245, 245, 245, 0.727);
     border: none;
     outline: none;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgba(245, 245, 245, 0.597);
     border-radius: 10px;
     font-size: 16px;
-    color: #000000;
+    color: #020202;
     padding: 20px 45px 20px 20px;
 
 }
  
 .input-box input::placeholder{
-    color: #000000;
+    color: #a6a4a4;
 }
 .input-box i{
     /* position: absolute; */
@@ -59,20 +62,22 @@ body{
     transform: translateY(-50%);
     font-size: 20px;
 }
-.wrapper .remember-forget{
+
+
+.wrapper .remember-forget {
     display: flex;
-    justify-content: space-between;
     font-size: 14.5px;
     margin: -15px 0 15px;
 }
-
-.remember-forget label input{
-    accent-color: #ffff;
+.remember-forget a{
+    align-items: center;
     text-decoration: none;
+    color: rgba(134, 133, 133, 0.991);
 }
 .remember-forget a:hover{
-    text-decoration: underline;
+    color: rgb(0, 0, 0);
 }
+
 
 .wrapper .btn{
     width: 100%;
@@ -96,7 +101,7 @@ body{
 }
 
 .register-link p a{
-    color: #facc6a;
+    color:whitesmoke;
     text-decoration: none;
     font-weight: 600;
 }
