--- a/css/main.css
+++ b/css/main.css
@@ -375,7 +375,7 @@ span, .navbar-toggler-icon{
 }
 .help-post-container a{
     text-decoration: none;
-    color:#73247a;
+    color:#ffda01;
 }
 
 .header_wrapper{
@@ -517,31 +517,31 @@ span, .navbar-toggler-icon{
     font-size: 1.3em;
 }
 
-.header_wrapper .cols_container .right_col nav{
+/* .header_wrapper .cols_container .right_col nav{
     display: flex;
     align-items: center;
     padding: 30px 0 ;
     justify-content: space-between;
     flex-direction: column;
-}
-.header_wrapper .cols_container .right_col nav ul{
+} */
+.header_wrapper .cols_container .left_col nav ul{
     display: flex;
     gap: 20px;
     flex-direction: column;
 }
 
-.header_wrapper .cols_container .right_col nav ul li a{
+.header_wrapper .cols_container .left_col nav ul li a{
     text-transform: uppercase;
     color: #818181;
 }
 
 
-.header_wrapper .cols_container .right_col nav ul li:nth-child(1) a{
+/* .header_wrapper .cols_container .left_col nav ul li:nth-child(1) a{
     color: #1d1d1d;
     font-weight: 600;
-}
+} */
 
-.header_wrapper .cols_container .right_col nav button:hover{
+.header_wrapper .cols_container .left_col nav button:hover{
     opacity: 0.8;
 }
 .header_wrapper .cols_container .photos{
