--- a/css/signin.css
+++ b/css/signin.css
@@ -62,6 +62,34 @@ body{
     transform: translateY(-50%);
     font-size: 20px;
 }
+.input-box input[type="file"]{
+    display: none;
+}
+ .input-box label{
+    display: inline-flex;
+    text-transform:uppercase;
+    color: white;
+    background-color: #ffaf01;
+    text-align: center;
+    padding: 10px 40px 10px 30px;
+    font-size: 16px;
+    letter-spacing: 1.5px;
+    user-select: none;
+    cursor: pointer;
+    box-shadow: 5px 15px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 1em;
+    margin-left: 25px;
+
+ }
+
+ .input-box label i{
+    font-size: 20px;
+    margin-top: 10px;
+    margin-right: 15px;
+
+ }
+
+
 
 
 .wrapper .remember-forget {
