--- a/css/main.css
+++ b/css/main.css
@@ -687,3 +687,17 @@ input[type="radio"]:checked + .label {
 
  }
 
+ .photos {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 10px; 
+    margin-top: 20px; 
+    justify-content: center;
+}
+
+.photos img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    object-position: center;
+}
