--- a/css/main.css
+++ b/css/main.css
@@ -701,3 +701,12 @@ input[type="radio"]:checked + .label {
     object-fit: cover; 
     object-position: center;
 }
+
+.preview-image {
+    max-width: 100%; 
+    height: auto; 
+    border-radius: 10px; 
+    border: 2px solid #000; 
+    margin: 10px auto;
+    display: block; 
+}
