--- a/css/main.css
+++ b/css/main.css
@@ -705,8 +705,6 @@ input[type="radio"]:checked + .label {
 .preview-image {
     max-width: 100%; 
     height: auto; 
-    border-radius: 10px; 
-    border: 2px solid #000; 
-    margin: 10px auto;
-    display: block; 
+    border-radius: none; 
+    margin: 10px auto; 
 }
