--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ span, .navbar-toggler-icon{
 }
 
 .help-content{
-    flex-basis: 77%;
+    display: flex;
 }
 
 .help-post-container{
@@ -378,6 +378,7 @@ span, .navbar-toggler-icon{
     border-radius: 6px;
     padding: 20px;
     color: #626262;
+    margin: 40px;
 
 }
 .help-post-container h3{
@@ -691,8 +692,9 @@ input[type="radio"]:checked + .label {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 10px; 
-    margin-top: 20px; 
+    margin: -10px 5px 50px 5px; 
     justify-content: center;
+    
 }
 
 .photos img {
@@ -707,4 +709,21 @@ input[type="radio"]:checked + .label {
     height: auto; 
     border-radius: none; 
     margin: 10px auto; 
+}
+footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    background-color: rgba(255, 224, 85, 0.822);
+    text-align: center;
+}
+footer, p{
+    /* text-align: center; */
+    font-size: 15px;
+    margin-top: 3px;
+    margin-bottom: -3px;
+}
+.help_link{
+    font-size: 15px;
+     color: #000000;
 }
