--- a/css/main.css
+++ b/css/main.css
@@ -733,3 +733,30 @@ footer, p{
 .help_link a:hover {
     color: black; 
 }
+
+.main-sidebar {
+    float: center; 
+    width: 100%; 
+    padding: 10px;
+  }
+  
+  .setting-links {
+    margin-top: 20px; 
+  }
+  
+  .setting-links h5 {
+    margin-bottom: 10px; 
+  }
+  
+  .setting-links p {
+    margin: 5px 0; /* リンク間の余白を設定 */
+  }
+  
+  .setting-links a {
+    text-decoration: none; /* リンクの下線を削除 */
+    color: #333; /* リンクの色を設定 */
+  }
+  
+  .setting-links a:hover {
+    color: #f0e623; /* ホバー時のリンクの色を変更 */
+  }
