--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,6 @@ span, .navbar-toggler-icon{
 
 
 .container{
-    display: flex;
     justify-content: space-between;
 }
 
@@ -709,7 +708,7 @@ input[type="radio"]:checked + .label {
     max-width: 100%; 
     height: auto; 
     border-radius: none; 
-    margin: 10px auto; 
+    margin:auto; 
 }
   
 footer{
