--- a/css/main.css
+++ b/css/main.css
@@ -622,7 +622,7 @@ span, .navbar-toggler-icon{
   }
   
   .btn_type01:hover {
-    background-color: rgba(255, 224, 85, 0.986);
+    background-color: rgb(254, 221, 74);
   }
 
 
@@ -705,12 +705,12 @@ input[type="radio"]:checked + .label {
     object-position: center;
 }
 
-.preview-image {
+/* .preview-image {
     max-width: 100%; 
     height: auto; 
     border-radius: none; 
     margin: 10px auto; 
-}
+} */
   
 footer{
     position: fixed;
